Bổ Sung Bài Tập

--- a/vidu02.html
+++ b/vidu02.html
@@ -15,12 +15,12 @@
     </div>
    
     <script>
-        let div2 = document.createElement("div1");
-        div2.innerHTML = "đoạn thứ 3";
+        let pa_3 = document.createElement("p");
+        pa_3.innerHTML = "đoạn thứ 3";
 
-        let a= document.getElementById("div1");
+        let pa_1 = document.getElementById("p1");
 
-        a.insertBefore(div1);
+        pa_1.insertBefore(div1);
 
     </script>
 </body>
